Work through more on 0501

--- a/notebooks/exploratory/05_intro_to_backprop.ipynb
+++ b/notebooks/exploratory/05_intro_to_backprop.ipynb
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f44bfc14",
    "metadata": {},
    "outputs": [],
@@ -540,8 +540,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea1e8573",
+   "metadata": {},
+   "source": [
+    "### Exercise 1: \n",
+    "\n",
+    "Backprop through the whole thing manually, backpropagating through exactly all of the variables as they are defined in the forward pass above, one by one\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "96d0e6fe",
    "metadata": {},
    "outputs": [
@@ -554,22 +564,15 @@
     }
    ],
    "source": [
-    "# Exercise 1: backprop through the whole thing manually, backpropagating through exactly all of the variables as they are defined in the forward pass above, one by one\n",
-    "\n",
     "dlogprobs = torch.zeros_like(logprobs)\n",
     "dlogprobs[range(n), Yb] = -1.0/n\n",
     "\n",
-    "cmp('logprobs', dlogprobs, logprobs)\n",
-    "# cmp('bndiff2', dbndiff2, bndiff2)\n",
-    "# cmp('bnmeani', dbnmeani, bnmeani)\n",
-    "# cmp('hprebn', dhprebn, hprebn)\n",
-    "# cmp('embcat', dembcat, embcat)\n",
-    "# cmp('W1', dW1, W1)"
+    "cmp('logprobs', dlogprobs, logprobs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6b8c016f",
    "metadata": {},
    "outputs": [
@@ -588,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ecbec2a1",
    "metadata": {},
    "outputs": [
@@ -598,7 +601,7 @@
        "(torch.Size([32, 27]), torch.Size([32, 1]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d75ca9f4",
    "metadata": {},
    "outputs": [
@@ -686,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "2e164498",
    "metadata": {},
    "outputs": [
@@ -705,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "6b5ef73c",
    "metadata": {},
    "outputs": [
@@ -726,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "ed720e8b",
    "metadata": {},
    "outputs": [
@@ -746,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "0ca7a7b4",
    "metadata": {},
    "outputs": [
@@ -772,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "04224667",
    "metadata": {},
    "outputs": [
@@ -791,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "8bd37cf4",
    "metadata": {},
    "outputs": [
@@ -817,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "203b1a12",
    "metadata": {},
    "outputs": [
@@ -826,8 +829,7 @@
      "output_type": "stream",
      "text": [
       "bnvar_inv       | exact: False | approximate: True  | maxdiff: 5.587935447692871e-09\n",
-      "bnvar           | exact: False | approximate: True  | maxdiff: 1.1641532182693481e-09\n",
-      "bndiff          | exact: False | approximate: False | maxdiff: 0.0012138168094679713\n"
+      "bnvar           | exact: False | approximate: True  | maxdiff: 1.1641532182693481e-09\n"
      ]
     }
    ],
@@ -836,20 +838,217 @@
     "dbnvar_inv = (bndiff * dbnraw).sum(0, keepdim=True)\n",
     "dbnvar = (-0.5*(bnvar + 1e-5)**-1.5) * dbnvar_inv\n",
     "\n",
-    "\n",
     "cmp('bnvar_inv', dbnvar_inv, bnvar_inv)\n",
-    "cmp('bnvar', dbnvar, bnvar)\n",
-    "\n",
-    "\n",
+    "cmp('bnvar', dbnvar, bnvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cff70392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bndiff2         | exact: False | approximate: True  | maxdiff: 3.637978807091713e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbndiff2 = (1.0/(n-1))*torch.ones_like(bndiff2) * dbnvar\n",
+    "cmp('bndiff2', dbndiff2, bndiff2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "70163a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bndiff          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbndiff += (2*bndiff) * dbndiff2\n",
     "cmp('bndiff', dbndiff, bndiff)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "f34a8f9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bnmeani         | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "dhprebn = dbndiff.clone()\n",
+    "dbnmeani = (-dbndiff).sum(0)\n",
+    "\n",
+    "cmp('bnmeani', dbnmeani, bnmeani)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4ac5717e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hprebn          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "dhprebn += 1.0/n * (torch.ones_like(hprebn) * dbnmeani) \n",
+    "cmp('hprebn', dhprebn, hprebn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "381c4d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embcat          | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n",
+      "W1              | exact: False | approximate: True  | maxdiff: 5.587935447692871e-09\n",
+      "b1              | exact: False | approximate: True  | maxdiff: 4.6566128730773926e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "dembcat = dhprebn @ W1.T\n",
+    "dW1 = embcat.T @ dhprebn\n",
+    "db1 = dhprebn.sum(0)\n",
+    "\n",
+    "cmp('embcat', dembcat, embcat)\n",
+    "cmp('W1', dW1, W1)\n",
+    "cmp('b1', db1, b1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b85c0101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emb             | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "demb = dembcat.view(emb.shape)\n",
+    "\n",
+    "cmp('emb', demb, emb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5419c99a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C               | exact: False | approximate: False | maxdiff: 40.697628021240234\n"
+     ]
+    }
+   ],
+   "source": [
+    "dC = torch.zeros_like(C)\n",
+    "for k in range(Xb.shape[0]):\n",
+    "    for j in range(Xb.shape[1]):\n",
+    "        ix = Xb[k,j]\n",
+    "        dC[ix] += emb[k,j] \n",
+    "cmp('C', dC, C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11ec97fa",
+   "metadata": {},
+   "source": [
+    "### Exercise 2:\n",
+    "\n",
+    "Backprop through cross_entropy but all in one go. To complete this challenge look at the mathematical expression of the loss, take the derivative, simplify the expression, and just write it out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "87832d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.827937126159668 , diff:  -2.384185791015625e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "logit_maxes = logits.max(1, keepdim=True).values\n",
+    "norm_logits = logits - logit_maxes # subtract max for numerical stability\n",
+    "counts = norm_logits.exp()\n",
+    "counts_sum = counts.sum(1, keepdims=True)\n",
+    "counts_sum_inv = counts_sum**-1 # if I use (1.0 / counts_sum) isntead then I can't get backprop to be bit exact...\n",
+    "probs = counts * counts_sum_inv\n",
+    "logprobs = probs.log()\n",
+    "loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "# now:\n",
+    "loss_fast = F.cross_entropy(logits, Yb)\n",
+    "print(loss_fast.item(), 'diff: ', (loss_fast - loss).item())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cff70392",
+   "id": "5fbb2b82",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "dlogits = F.softmax\n",
+    "\n",
+    "# cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f175865b",
+   "metadata": {},
    "source": []
   }
  ],
