Attempt work, but computer issues

--- a/notebooks/exploratory/05_intro_to_backprop.ipynb
+++ b/notebooks/exploratory/05_intro_to_backprop.ipynb
@@ -1033,16 +1033,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "5fbb2b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits          | exact: False | approximate: True  | maxdiff: 4.6566128730773926e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "dlogits = F.softmax(logits, 1)\n",
+    "dlogits[range(n), Yb] -= 1\n",
+    "dlogits /= n\n",
+    "\n",
+    "cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "640a8dcb",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "Back prop through BatchNorm but all in one go. To complete this challenge, look at the mathematical expression of the output of BatchNorm, take the derivative w.r.t. its input, simplify the expression, and just write it out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d3df0a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max diff: tensor(2.1935e-05, grad_fn=<MaxBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "# bnmeani = 1/n*hprebn.sum(0, keepdim=True)\n",
+    "# bndiff = hprebn - bnmeani\n",
+    "# bndiff2 = bndiff**2\n",
+    "# bnvar = 1/(n-1)*(bndiff2).sum(0,keepdim=True) # note: Bessel's corection (dividing by n-1, not n)\n",
+    "# bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "# bnraw = bndiff * bnvar_inv\n",
+    "# hpreact = bngain * bnraw + bnbias\n",
+    "\n",
+    "# now:\n",
+    "hpreact_fast = bngain * (hprebn - hprebn.mean(0, keepdim=True)) / torch.sqrt(hprebn.var(0,keepdim=True, correction=1))\n",
+    "print('max diff:', (hpreact_fast - hpreact).abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a2922c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# backward pass\n",
     "\n",
-    "dlogits = F.softmax\n",
+    "# before \n",
+    "# almost the entirety of exercise 1!\n",
     "\n",
-    "# cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
+    "# calculate dhprebn given dhpreact (i.e. backprop through the batchnorm)\n",
+    "# you'll also need to use some of the variables from the forward pass up above"
    ]
   },
   {
