--- a/notebooks/exploratory/05_intro_to_backprop.ipynb
+++ b/notebooks/exploratory/05_intro_to_backprop.ipynb
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "f34a8f9a",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "4ac5717e",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "381c4d25",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "b85c0101",
    "metadata": {},
    "outputs": [
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "5419c99a",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "id": "87832d25",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.827937126159668 , diff:  -2.384185791015625e-07\n"
+      "3.827937126159668 diff:  -2.384185791015625e-07\n"
      ]
     }
    ],
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "5fbb2b82",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "d3df0a6f",
    "metadata": {},
    "outputs": [
@@ -1098,10 +1098,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8a2922c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hprebn          | exact: False | approximate: True  | maxdiff: 1.3969838619232178e-09\n"
+     ]
+    }
+   ],
    "source": [
     "# backward pass\n",
     "\n",
@@ -1109,13 +1117,499 @@
     "# almost the entirety of exercise 1!\n",
     "\n",
     "# calculate dhprebn given dhpreact (i.e. backprop through the batchnorm)\n",
-    "# you'll also need to use some of the variables from the forward pass up above"
+    "# you'll also need to use some of the variables from the forward pass up above\n",
+    "\n",
+    "dhprebn = bngain * bnvar_inv / n * (n*dhpreact - dhpreact.sum(0) - n /(n-1) * bnraw * (dhpreact*bnraw).sum(0))\n",
+    "cmp('hprebn', dhprebn, hprebn)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f175865b",
    "metadata": {},
+   "source": [
+    "### Exercise 4: Putting it all together!\n",
+    "\n",
+    "Train the MLP neural net with your own backward pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5ab9d580",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12297\n",
+      "      0/ 200000: 3.8279\n",
+      "  10000/ 200000: 2.3799\n",
+      "  20000/ 200000: 2.4661\n",
+      "  30000/ 200000: 2.6072\n",
+      "  40000/ 200000: 2.0396\n",
+      "  50000/ 200000: 2.7389\n",
+      "  60000/ 200000: 2.5788\n",
+      "  70000/ 200000: 2.2775\n",
+      "  80000/ 200000: 2.4983\n",
+      "  90000/ 200000: 2.3815\n",
+      " 100000/ 200000: 2.5935\n",
+      " 110000/ 200000: 2.5690\n",
+      " 120000/ 200000: 2.3680\n",
+      " 130000/ 200000: 2.5816\n",
+      " 140000/ 200000: 2.6848\n",
+      " 150000/ 200000: 2.4446\n",
+      " 160000/ 200000: 2.2323\n",
+      " 170000/ 200000: 2.1096\n",
+      " 180000/ 200000: 2.2227\n",
+      " 190000/ 200000: 2.1855\n"
+     ]
+    }
+   ],
+   "source": [
+    "# init\n",
+    "n_embd = 10 # the dimensionality of the character embedding vectors\n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "\n",
+    "# Layer 1\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3) / ((n_embd * block_size)**0.5)\n",
+    "b1 = torch.randn(n_hidden, generator=g) * 0.1 # using b1 just for fun, it's useless because of the BatchNormalization layer\n",
+    "\n",
+    "# Layer 2\n",
+    "W2 = torch.randn((n_hidden,vocab_size), generator=g) * 0.1\n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0.1\n",
+    "\n",
+    "# BatchNorm parameters\n",
+    "bngain = torch.ones((1, n_hidden)) * 0.1 + 1.0\n",
+    "bnbias = torch.zeros((1, n_hidden)) * 0.1\n",
+    "\n",
+    "# Note: I am initializing many of these parameters in non-standard ways because sometimes initializing with e.g. all zeros could mask an incorrect implementation of the backward pass\n",
+    "# bnmean_running = torch.zeros((1, n_hidden))\n",
+    "# bnstd_running = torch.ones((1, n_hidden))\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
+    "\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total\n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True\n",
+    "\n",
+    "# same optimization as last time\n",
+    "max_steps = 200000\n",
+    "batch_size = 32\n",
+    "n = batch_size # convenience\n",
+    "lossi = []\n",
+    "\n",
+    "# use this context manager for efficiency once your backward pass is written (TODO)\n",
+    "with torch.no_grad():\n",
+    "\n",
+    "# kick off optimization\n",
+    "    for i in range(max_steps):\n",
+    "        # minibatch construct\n",
+    "        ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "        Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y\n",
+    "        \n",
+    "        emb = C[Xb] # embed the characters into vectors\n",
+    "        embcat = emb.view(emb.shape[0], -1) # concatenate the vectors\n",
+    "\n",
+    "        # Linear layer 1\n",
+    "        hprebn = embcat @ W1 + b1 # hidden layer pre-activation\n",
+    "\n",
+    "        # BatchNorm layer \n",
+    "        bnmean = hprebn.mean(0, keepdim=True)\n",
+    "        bnvar = hprebn.var(0, keepdim=True, correction=1)\n",
+    "        bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "        bnraw = (hprebn - bnmean) * bnvar_inv\n",
+    "        hpreact = bngain * bnraw + bnbias\n",
+    "\n",
+    "        # non-linearity\n",
+    "        h = torch.tanh(hpreact) # hidden layer\n",
+    "\n",
+    "        # linear layer 2\n",
+    "        logits = h @ W2 + b2 # output layer\n",
+    "\n",
+    "        # cross entropy loss (same as F.cross_entropy(logits, Yb))\n",
+    "        loss = F.cross_entropy(logits, Yb) # loss function\n",
+    "\n",
+    "        # PyTorch backward pass\n",
+    "        for p in parameters:\n",
+    "            p.grad = None\n",
+    "        \n",
+    "        # loss.backward() #use this for correctness comparisons, delete it later!\n",
+    "        \n",
+    "        # manual backprop! #swole_doge_meme\n",
+    "        dlogits = F.softmax(logits, 1)\n",
+    "        dlogits[range(n), Yb] -= 1\n",
+    "        dlogits /= n\n",
+    "\n",
+    "        # 2nd layer backprop\n",
+    "        dh = dlogits @ W2.T \n",
+    "        dW2 = h.T @ dlogits\n",
+    "        db2 = dlogits.sum(0)\n",
+    "\n",
+    "        # tanh\n",
+    "        dhpreact = (1.0 - h**2) * dh\n",
+    "\n",
+    "        # batchnorm backprop\n",
+    "        dbngain = (bnraw * dhpreact).sum(0, keepdim=True)\n",
+    "        dbnraw = bngain * dhpreact\n",
+    "        dbnbias = dhpreact.sum(0, keepdim=True)\n",
+    "\n",
+    "        # 1st layer\n",
+    "        dembcat = dhprebn @ W1.T\n",
+    "        dW1 = embcat.T @ dhprebn\n",
+    "        db1 = dhprebn.sum(0)\n",
+    "\n",
+    "        # embedding\n",
+    "        demb = dembcat.view(emb.shape)\n",
+    "        dC = torch.zeros_like(C)\n",
+    "\n",
+    "        for k in range(Xb.shape[0]):\n",
+    "            for j in range(Xb.shape[1]):\n",
+    "                ix = Xb[k,j]\n",
+    "                dC[ix] += demb[k,j]\n",
+    "        \n",
+    "        grads = [dC, dW1, db1, dW2, db2, dbngain, dbnbias]\n",
+    "\n",
+    "        # update\n",
+    "        lr = 0.1 if i < 100000 else 0.01 # step learning rate decary\n",
+    "        for p, grad in zip(parameters, grads):\n",
+    "            # p.data += -lr * p.grad # old way of cheems doge (using PyTorch grad from .backward())\n",
+    "            p.data += -lr * grad # new way of swole doge TODO: enable\n",
+    "\n",
+    "        # track stats\n",
+    "        if i % 10000 == 0: # print every once in a while\n",
+    "            print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "        lossi.append(loss.log10().item())\n",
+    "\n",
+    "        # if i >= 100: #TODO: early breaking when you're ready to train the full net\n",
+    "        #     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ee81c276",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27, 10)        | exact: False | approximate: False | maxdiff: 0.08469603210687637\n",
+      "(30, 200)       | exact: False | approximate: False | maxdiff: 0.07280236482620239\n",
+      "(200,)          | exact: False | approximate: True  | maxdiff: 6.402842700481415e-09\n",
+      "(200, 27)       | exact: False | approximate: True  | maxdiff: 1.862645149230957e-08\n",
+      "(27,)           | exact: False | approximate: True  | maxdiff: 1.4901161193847656e-08\n",
+      "(1, 200)        | exact: False | approximate: True  | maxdiff: 2.7939677238464355e-09\n",
+      "(1, 200)        | exact: False | approximate: True  | maxdiff: 3.725290298461914e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# useful for checking your gradients\n",
+    "# for p,g in zip(parameters, grads):\n",
+    "#     cmp(str(tuple(p.shape)), g, p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "867c86db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calibrate the batch norm at the end of training\n",
+    "with torch.no_grad():\n",
+    "    # pass the training set through\n",
+    "    emb = C[Xtr]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "    \n",
+    "    # measure the mean/std over the entire training set\n",
+    "    bnmean = hpreact.mean(0, keepdim=True)\n",
+    "    bnvar = hpreact.var(0, keepdim=True, correction=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fa69bd7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.3640332221984863\n",
+      "val 2.364452362060547\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate train and val loss\n",
+    "@torch.no_grad() # this decorator disables gradient tracking\n",
+    "def split_loss(split):\n",
+    "    x, y = {\n",
+    "        'train': (Xtr, Ytr),\n",
+    "        'val': (Xdev, Ydev),\n",
+    "        'test': (Xte, Yte)\n",
+    "    }[split]\n",
+    "\n",
+    "    emb = C[x]\n",
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 + b1\n",
+    "    hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "    h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "    logits = h @ W2 + b2 # (N, vocab_size)\n",
+    "    loss = F.cross_entropy(logits, y)\n",
+    "    print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b4717e2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v\n",
+      "va\n",
+      "vay\n",
+      "vaya\n",
+      "vayan\n",
+      "vayani\n",
+      "y\n",
+      "yu\n",
+      "yus\n",
+      "yusi\n",
+      "yusir\n",
+      "yusirt\n",
+      "yusirte\n",
+      "yusirten\n",
+      "w\n",
+      "wr\n",
+      "wra\n",
+      "wray\n",
+      "wrayl\n",
+      "wraylu\n",
+      "wrayluo\n",
+      "wrayluon\n",
+      "wrayluone\n",
+      "wrayluoner\n",
+      "wrayluonero\n",
+      "wrayluoneroo\n",
+      "q\n",
+      "qh\n",
+      "qha\n",
+      "qhan\n",
+      "d\n",
+      "de\n",
+      "den\n",
+      "dena\n",
+      "denay\n",
+      "denaya\n",
+      "denayai\n",
+      "denayail\n",
+      "denayaila\n",
+      "denayailan\n",
+      "denayailand\n",
+      "denayailandi\n",
+      "denayailandic\n",
+      "denayailandico\n",
+      "denayailandicon\n",
+      "denayailandiconi\n",
+      "denayailandiconih\n",
+      "denayailandiconihl\n",
+      "denayailandiconihla\n",
+      "denayailandiconihlan\n",
+      "denayailandiconihlane\n",
+      "denayailandiconihlanel\n",
+      "s\n",
+      "so\n",
+      "sos\n",
+      "sose\n",
+      "n\n",
+      "na\n",
+      "nay\n",
+      "naye\n",
+      "nayer\n",
+      "nayere\n",
+      "nayeree\n",
+      "nayereel\n",
+      "nayereela\n",
+      "o\n",
+      "or\n",
+      "orr\n",
+      "orri\n",
+      "orrin\n",
+      "orrine\n",
+      "c\n",
+      "ch\n",
+      "chu\n",
+      "chuw\n",
+      "chuwe\n",
+      "chuwel\n",
+      "chuwele\n",
+      "chuwelei\n",
+      "chuweleig\n",
+      "chuweleigr\n",
+      "chuweleigro\n",
+      "g\n",
+      "go\n",
+      "got\n",
+      "goty\n",
+      "gotya\n",
+      "a\n",
+      "ab\n",
+      "abe\n",
+      "abeu\n",
+      "abeus\n",
+      "abeusa\n",
+      "abeusan\n",
+      "abeusani\n",
+      "abeusanis\n",
+      "abeusanisa\n",
+      "abeusanisan\n",
+      "abeusanisany\n",
+      "abeusanisanyl\n",
+      "n\n",
+      "na\n",
+      "nal\n",
+      "nall\n",
+      "nalla\n",
+      "nallah\n",
+      "nallahe\n",
+      "nallahel\n",
+      "y\n",
+      "ya\n",
+      "yar\n",
+      "yara\n",
+      "yaran\n",
+      "yarani\n",
+      "yaraniy\n",
+      "yaraniye\n",
+      "yaraniyen\n",
+      "n\n",
+      "ny\n",
+      "nyy\n",
+      "nyya\n",
+      "nyyay\n",
+      "d\n",
+      "de\n",
+      "den\n",
+      "c\n",
+      "ca\n",
+      "cau\n",
+      "caue\n",
+      "cauea\n",
+      "cauean\n",
+      "caueana\n",
+      "k\n",
+      "ka\n",
+      "kam\n",
+      "kama\n",
+      "kamar\n",
+      "kamari\n",
+      "kamaria\n",
+      "kamarian\n",
+      "kamariane\n",
+      "kamarianeg\n",
+      "kamarianego\n",
+      "kamarianegon\n",
+      "p\n",
+      "pi\n",
+      "pis\n",
+      "pisr\n",
+      "pisre\n",
+      "pisren\n",
+      "pisreni\n",
+      "pisrenia\n",
+      "pisreniah\n",
+      "pisreniaha\n",
+      "pisreniahar\n",
+      "pisreniahari\n",
+      "pisreniahariy\n",
+      "pisreniahariya\n",
+      "pisreniahariyaa\n",
+      "pisreniahariyaaz\n",
+      "pisreniahariyaazi\n",
+      "pisreniahariyaazil\n",
+      "pisreniahariyaazile\n",
+      "pisreniahariyaazilee\n",
+      "pisreniahariyaazileel\n",
+      "pisreniahariyaazileele\n",
+      "pisreniahariyaazileelei\n",
+      "pisreniahariyaazileelein\n",
+      "pisreniahariyaazileeleine\n",
+      "pisreniahariyaazileeleiner\n",
+      "pisreniahariyaazileeleinert\n",
+      "pisreniahariyaazileeleinertu\n",
+      "pisreniahariyaazileeleinertun\n",
+      "pisreniahariyaazileeleinertune\n",
+      "pisreniahariyaazileeleinertunet\n",
+      "pisreniahariyaazileeleinertunett\n",
+      "pisreniahariyaazileeleinertunetto\n",
+      "pisreniahariyaazileeleinertunettoa\n",
+      "pisreniahariyaazileeleinertunettoan\n",
+      "i\n",
+      "ic\n",
+      "ich\n",
+      "ichl\n",
+      "ichle\n",
+      "ichlen\n",
+      "k\n",
+      "ke\n",
+      "ken\n",
+      "keny\n",
+      "kenys\n",
+      "kenysn\n",
+      "kenysna\n",
+      "kenysnad\n",
+      "kenysnadi\n",
+      "kenysnadir\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(20):\n",
+    "    out = []\n",
+    "    context = [0] * block_size # initialize with all ...\n",
+    "    while True:\n",
+    "        # forward pass\n",
+    "        # Embedding\n",
+    "        emb = C[torch.tensor([context])] # (1, block_size, d)\n",
+    "        embcat = emb.view(emb.shape[0], -1)\n",
+    "        hpreact = embcat @ W1 + b1\n",
+    "        hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "        h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "        logits = h @ W2 + b2\n",
+    "\n",
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "        context = context[1:] + [ix]\n",
+    "        out.append(ix)\n",
+    "        if ix == 0:\n",
+    "            break\n",
+    "\n",
+    "        print(''.join(itos[i] for i in out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c01ea5f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
