--- a/notebooks/exploratory/07_intro_to_gpt.ipynb
+++ b/notebooks/exploratory/07_intro_to_gpt.ipynb
@@ -726,6 +726,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "5a376738",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0.1808, -0.0700],\n",
+       "         [-0.0894, -0.4926],\n",
+       "         [ 0.1490, -0.3199],\n",
+       "         [ 0.3504, -0.2238],\n",
+       "         [ 0.3525,  0.0545],\n",
+       "         [ 0.0688, -0.0396],\n",
+       "         [ 0.0927, -0.0682],\n",
+       "         [-0.0341,  0.1332]]),\n",
+       " tensor([[ 0.1808, -0.0700],\n",
+       "         [-0.0894, -0.4926],\n",
+       "         [ 0.1490, -0.3199],\n",
+       "         [ 0.3504, -0.2238],\n",
+       "         [ 0.3525,  0.0545],\n",
+       "         [ 0.0688, -0.0396],\n",
+       "         [ 0.0927, -0.0682],\n",
+       "         [-0.0341,  0.1332]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0], xbow2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "8345d465",
    "metadata": {},
