--- a/notebooks/exploratory/07_intro_to_gpt.ipynb
+++ b/notebooks/exploratory/07_intro_to_gpt.ipynb
@@ -831,6 +831,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4baf4fae",
+   "metadata": {},
+   "source": [
+    "Andrej created a v2 of the `bigram.py` script to start using a script form of self-attention, but we work through learning the architecture below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "a783ce6a",
@@ -901,6 +909,9 @@
     }
    ],
    "source": [
+    "# This cell was run several times to show the effects of masked_fill and softmax\n",
+    "# What's actually happening here is that wei is when all the queries dot product with all the keys\n",
+    "# The resulting wei displays affinities for other tokens based on existing query's position and value\n",
     "wei[0]"
    ]
   },
@@ -916,9 +927,43 @@
     "   \n",
     "3. Each example across batch dimension is processed completely independently and never \"talk\" to each other \n",
     "\n",
-    "4. In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate\n",
+    "4. In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This is useful for something like sentiment analysis when you need all context. `tril` here is a 'decoder' attention block because it has triangular masking, and is usually used in autoregressive settings, like predictive modeling\n",
     "   \n",
-    "5. \"Self-attention\" just means "
+    "5. \"Self-attention\" just means that the keys and values are produced from the same source as queries. In \"cross-attention\", the queries still get produced from x but the keys and values come from some other external source (e.g., an encoder module)\n",
+    "\n",
+    "6. \"Scaled\" attention additionally divides `wei` by 1/sqrt(head_size). This makes it so when the input Q, K are unit varance, wei will be unit variance too, and Softmax will stay diffuse and not saturate too much (which will converge to OneHot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0b20cbac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.0877)\n",
+      "tensor(1.0594)\n",
+      "tensor(1.1527)\n",
+      "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])\n",
+      "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of saturating\n",
+    "k = torch.randn(B, T, head_size)\n",
+    "q = torch.randn(B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1) * head_size**-0.5\n",
+    "\n",
+    "print(k.var())\n",
+    "print(q.var())\n",
+    "print(wei.var())\n",
+    "\n",
+    "print(torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1))\n",
+    "print(torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5])*8, dim=-1))"
    ]
   },
   {
