Write out first try at multi head attention, run

--- a/notebooks/exploratory/07_intro_to_gpt.ipynb
+++ b/notebooks/exploratory/07_intro_to_gpt.ipynb
@@ -968,33 +968,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "865c37b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@torch.no_grad()\n",
-    "def estimate_loss():\n",
-    "    out = {}\n",
-    "    model.eval()\n",
-    "    for split in ['train', 'val']:\n",
-    "        losses = torch.zeros(eval_iters)\n",
-    "        for k in range(eval_iters):\n",
-    "            X, Y = get_batch(split)\n",
-    "            logits, loss = model(X, Y)\n",
-    "            losses[k] = loss.item()\n",
-    "        out[split] = losses.mean()\n",
-    "    model.train()\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "2f1dc0fd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This code block is added to v2 to add a single Head of self-attention\n",
+    "\n",
     "class Head(nn.Module):\n",
     "    \"\"\" one head of self-attention \"\"\"\n",
     "\n",
@@ -1023,179 +1003,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "b02d0e16",
+   "cell_type": "markdown",
+   "id": "c1c92861",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class BigramLanguageModel(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        # each token directly reads off the logits for the next token from a lookup table\n",
-    "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
-    "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
-    "        self.sa_head = Head(n_embd)\n",
-    "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
-    "        \n",
-    "\n",
-    "    def forward(self, idx, targets=None):\n",
-    "        B, T = idx.shape\n",
-    "        \n",
-    "        # idx and targets are both (B,T) tensor of integers\n",
-    "        tok_emb = self.token_embedding_table(idx) # (B, T, C)\n",
-    "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # (T,C)\n",
-    "        x = tok_emb + pos_emb # (B, T, C)\n",
-    "        x = self.sa_head(x) # apply one head of self-attention (B, T, C)\n",
-    "        logits = self.lm_head(x) # (B, T, C)\n",
-    "\n",
-    "        if targets is None:\n",
-    "            loss = None\n",
-    "        else:\n",
-    "            B, T, C = logits.shape\n",
-    "            logits = logits.view(B*T, C)\n",
-    "            targets = targets.view(B*T)\n",
-    "            loss = F.cross_entropy(logits, targets)\n",
-    "\n",
-    "        return logits, loss\n",
-    "    \n",
-    "    def generate(self, idx, max_new_tokens):\n",
-    "        # idx is (B,T) array of indices in the current context\n",
-    "        for _ in range(max_new_tokens):\n",
-    "            # crop idx to the last block_size tokens\n",
-    "            idx_cond = idx[:, -block_size:]\n",
-    "\n",
-    "            # get the predictions\n",
-    "            logits, loss = self(idx_cond)\n",
-    "\n",
-    "            # focus only on the last time step\n",
-    "            logits = logits[:, -1, :] # becomes (B,C)\n",
-    "\n",
-    "            # apply softmax to get the probabilities\n",
-    "            probs = F.softmax(logits, dim=-1) # (B,C)\n",
-    "\n",
-    "            # sample from the distribution\n",
-    "            idx_next = torch.multinomial(probs, num_samples=1)\n",
-    "\n",
-    "            # append sampled index to the running sequence\n",
-    "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
-    "        return idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "74ef9b29",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "BigramLanguageModel.__init__() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m encode \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m s: [stoi[c] \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m s] \u001b[38;5;66;03m# encoder: take a string, output a list of integers\u001b[39;00m\n\u001b[1;32m     17\u001b[0m decode \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m l: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([itos[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m l])\n\u001b[0;32m---> 19\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mBigramLanguageModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvocab_size\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m m \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# create a PyTorch optimizer\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: BigramLanguageModel.__init__() takes 1 positional argument but 2 were given"
-     ]
-    }
-   ],
-   "source": [
-    "# hyperparameters\n",
-    "batch_size = 32 # how many independent sequences will we process in parallel?\n",
-    "block_size = 8 # what is the maximum context length for predictions?\n",
-    "max_iters = 5000\n",
-    "eval_interval = 500\n",
-    "learning_rate = 1e-3\n",
-    "device = 'cude' if torch.cuda.is_available else 'cpu'\n",
-    "eval_iters = 200\n",
-    "n_embd = 32\n",
-    "\n",
-    "torch.manual_seed(1337)\n",
-    "\n",
-    "# create a mapping from characters to integers\n",
-    "stoi = {ch:i for i, ch in enumerate(chars)}\n",
-    "itos = {i:ch for i, ch in enumerate(chars)}\n",
-    "encode = lambda s: [stoi[c] for c in s] # encoder: take a string, output a list of integers\n",
-    "decode = lambda l: ''.join([itos[i] for i in l])\n",
-    "\n",
-    "model = BigramLanguageModel(vocab_size)\n",
-    "m = model.to(device)\n",
-    "\n",
-    "# create a PyTorch optimizer\n",
-    "optimizer = torch.optim.AdamW(m.parameters(), \n",
-    "                              lr=1e-3)\n",
-    "\n",
-    "for iter in range(max_iters):\n",
-    "    # every once in a while, evaluate loss on train and val sets\n",
-    "    if iter % eval_interval == 0:\n",
-    "        losses = estimate_loss()\n",
-    "        print(f\"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\")\n",
-    "\n",
-    "    # sample a batch of data\n",
-    "    xb, yb = get_batch('train')\n",
-    "\n",
-    "    # evaluate the loss\n",
-    "    logits, loss = m(xb, yb)\n",
-    "    optimizer.zero_grad(set_to_none=True)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "# print(loss.item())\n",
-    "# generate from the model\n",
-    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
-    "print(decode(m.generate(context, max_new_tokens=500)[0].tolist()))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b65190b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.489769458770752\n"
-     ]
-    }
-   ],
-   "source": [
-    "# hyperparameters\n",
-    "batch_size = 32 # how many independent sequences will we process in parallel?\n",
-    "block_size = 8 # what is the maximum context length for predictions?\n",
-    "max_iters = 5000\n",
-    "eval_interval = 500\n",
-    "learning_rate = 1e-3\n",
-    "device = 'cude' if torch.cuda.is_available else 'cpu'\n",
-    "eval_iters = 200\n",
-    "n_embd = 32\n",
-    "\n",
-    "torch.manual_seed(1337)\n",
-    "\n",
-    "# create a mapping from characters to integers\n",
-    "stoi = {ch:i for i, ch in enumerate(chars)}\n",
-    "itos = {i:ch for i, ch in enumerate(chars)}\n",
-    "encode = lambda s: [stoi[c] for c in s] # encoder: take a string, output a list of integers\n",
-    "decode = lambda l: ''.join([itos[i] for i in l])\n",
-    "\n",
-    "# create a PyTorch optimizer\n",
-    "optimizer = torch.optim.AdamW(m.parameters(), \n",
-    "                              lr=1e-3)\n",
-    "\n",
-    "for steps in range(max_iters):\n",
-    "    # sample a batch of data\n",
-    "    xb, yb = get_batch('train')\n",
-    "\n",
-    "    # evaluate the loss\n",
-    "    logits, loss = m(xb, yb)\n",
-    "    optimizer.zero_grad(set_to_none=True)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "print(loss.item())\n"
+    "The loss decreases, with a single Head, but it isn't a huge amount. Self-attention helps but we need to do more. How about Multi-Head Attention, like the paper mentions?"
    ]
   },
   {
@@ -1210,7 +1022,7 @@
     "\n",
     "    def __init__(self, num_heads, head_size):\n",
     "        super().__init__()\n",
-    "        self.head = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+    "        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
     "\n",
     "    def forward(self, x):\n",
     "        return torch.cat([h(x) for h in self.heads], dim=-1)"
@@ -1276,6 +1088,15 @@
     "            # append sampled index to the running sequence\n",
     "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
     "        return idx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1b0847f",
+   "metadata": {},
+   "source": [
+    "Loss decreases more, but output still isn't very good... what's next in the paper?\n",
+    "\n"
    ]
   },
   {
