Add new modules to neural net and rename scripts
Each file has a different architecture, going up to "deep" nets

--- a/notebooks/exploratory/07_intro_to_gpt.ipynb
+++ b/notebooks/exploratory/07_intro_to_gpt.ipynb
@@ -1096,7 +1096,18 @@
    "metadata": {},
    "source": [
     "Loss decreases more, but output still isn't very good... what's next in the paper?\n",
-    "\n"
+    "\n",
+    "Paper uses Masked Multi-Head Attention (which we implemented) but also a cross-attention, which we will not implement.\n",
+    "\n",
+    "We had a computation layer (ReLU) in v4, but it also isn't enough. So we will ad a computation and communication layer.\n",
+    "\n",
+    "The communication -> computation Block starts into a deep net, and thus more reliant on optimization. So, let's add some optimizations.\n",
+    "\n",
+    "We'll add skip (or residual) connections, which get added to the Blocks. These function as a \"input to end\" highway.\n",
+    "\n",
+    "Residual connections helped a lot! Now, it looks like a drunk person typing...so still not perfect...\n",
+    "\n",
+    "Let's add layer normalization, which we've done before! Original paper did add + normalization after the transformation blocks. Now, 5 years since, it's more common to normalize before blocks, so that's what we're going to do."
    ]
   },
   {
