Finish lecture and v7 of our 'nanoGPT'

--- a/notebooks/exploratory/07_intro_to_gpt.ipynb
+++ b/notebooks/exploratory/07_intro_to_gpt.ipynb
@@ -82,16 +82,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-06-19 21:58:18--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "--2024-06-24 21:10:13--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 1115394 (1.1M) [text/plain]\n",
-      "Saving to: ‘input.txt.5’\n",
+      "Saving to: ‘input.txt.6’\n",
       "\n",
-      "input.txt.5         100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
+      "input.txt.6         100%[===================>]   1.06M  --.-KB/s    in 0.08s   \n",
       "\n",
-      "2024-06-19 21:58:19 (19.5 MB/s) - ‘input.txt.5’ saved [1115394/1115394]\n",
+      "2024-06-24 21:10:13 (13.4 MB/s) - ‘input.txt.6’ saved [1115394/1115394]\n",
       "\n"
      ]
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "5a376738",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "         [-0.0341,  0.1332]]))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "8345d465",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "61ad16b3",
    "metadata": {},
    "outputs": [
@@ -821,7 +821,7 @@
        "        [1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "a783ce6a",
    "metadata": {},
    "outputs": [
@@ -850,7 +850,7 @@
        "torch.Size([4, 8, 16])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "26a0b516",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
        "       grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "0b20cbac",
    "metadata": {},
    "outputs": [
@@ -944,9 +944,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.0877)\n",
-      "tensor(1.0594)\n",
-      "tensor(1.1527)\n",
+      "tensor(1.0449)\n",
+      "tensor(1.0700)\n",
+      "tensor(1.0918)\n",
       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])\n",
       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])\n"
      ]
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "2f1dc0fd",
    "metadata": {},
    "outputs": [],
@@ -1007,12 +1007,14 @@
    "id": "c1c92861",
    "metadata": {},
    "source": [
+    "### Notes on v3 (adding self-attention with a single head)\n",
+    "\n",
     "The loss decreases, with a single Head, but it isn't a huge amount. Self-attention helps but we need to do more. How about Multi-Head Attention, like the paper mentions?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "d52ff219",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "1ebe700d",
    "metadata": {},
    "outputs": [],
@@ -1095,9 +1097,13 @@
    "id": "d1b0847f",
    "metadata": {},
    "source": [
+    "### Notes on v4 (adding multi head attention)\n",
+    "\n",
     "Loss decreases more, but output still isn't very good... what's next in the paper?\n",
     "\n",
     "Paper uses Masked Multi-Head Attention (which we implemented) but also a cross-attention, which we will not implement.\n",
+    "\n",
+    "### Notes on v5 (adding skip/residual connections)\n",
     "\n",
     "We had a computation layer (ReLU) in v4, but it also isn't enough. So we will ad a computation and communication layer.\n",
     "\n",
@@ -1105,70 +1111,61 @@
     "\n",
     "We'll add skip (or residual) connections, which get added to the Blocks. These function as a \"input to end\" highway.\n",
     "\n",
+    "### Notes on v6 (adding layer normalization)\n",
+    "\n",
     "Residual connections helped a lot! Now, it looks like a drunk person typing...so still not perfect...\n",
     "\n",
-    "Let's add layer normalization, which we've done before! Original paper did add + normalization after the transformation blocks. Now, 5 years since, it's more common to normalize before blocks, so that's what we're going to do."
+    "Let's add layer normalization, which we've done before! Original paper did add + normalization after the transformation blocks. Now, 5 years since, it's more common to normalize before blocks, so that's what we're going to do.\n",
+    "\n",
+    "This gave still non-English words, but looks convincing from a distance, with a final validation loss of 2.0654. This is an encoder architecture transformer, but we're going to make some changes so that the Block deployment scales better"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bee72db4",
+   "cell_type": "markdown",
+   "id": "4b1872c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.487797975540161\n"
-     ]
-    }
-   ],
    "source": [
-    "# hyperparameters\n",
-    "batch_size = 32 # how many independent sequences will we process in parallel?\n",
-    "block_size = 8 # what is the maximum context length for predictions?\n",
-    "max_iters = 5000\n",
-    "eval_interval = 500\n",
-    "learning_rate = 1e-3\n",
-    "device = 'cude' if torch.cuda.is_available else 'cpu'\n",
-    "eval_iters = 200\n",
-    "n_embd = 32\n",
+    "### Notes on v7 of the script (scaling up)\n",
     "\n",
-    "torch.manual_seed(1337)\n",
+    "Took a long time to train, but the refactor resulted in a bigger architecture with much results. Final validation loss of 1.4936 and actual english words generated!\n",
     "\n",
-    "# create a mapping from characters to integers\n",
-    "stoi = {ch:i for i, ch in enumerate(chars)}\n",
-    "itos = {i:ch for i, ch in enumerate(chars)}\n",
-    "encode = lambda s: [stoi[c] for c in s] # encoder: take a string, output a list of integers\n",
-    "decode = lambda l: ''.join([itos[i] for i in l])\n",
+    "He also exported the results to a local file, but it isn't necessary to do that, I think. He says we're done with the programming exercise, but our architecture doesn't match the one in the paper...so let's keep going to learn why the paper's architecture is so weird!\n",
     "\n",
-    "model = BigramLanguageModel(vocab_size)\n",
-    "m = model.to(device)\n",
+    "### Differences between what we did and the original paper\n",
     "\n",
-    "# create a PyTorch optimizer\n",
-    "optimizer = torch.optim.AdamW(m.parameters(), \n",
-    "                              lr=1e-3)\n",
+    "We implemented a decoder-only transformer.\n",
     "\n",
-    "for iter in range(max_iters):\n",
-    "    # every once in a while, evaluate loss on train and val sets\n",
-    "    if iter % eval_interval == 0:\n",
-    "        losses = estimate_loss()\n",
-    "        print(f'step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}')\n",
+    "The paper used an encoder with cross-attention block before the Feed Forward block. \n",
     "\n",
-    "    # sample a batch of data\n",
-    "    xb, yb = get_batch('train')\n",
+    "Decoder-only is ok to generate text and is what is powers GPT. The paper used a decoder/encoder architecture is because it was intended to do some translation from French to English which requires encoding and decoding.\n",
     "\n",
-    "    # evaluate the loss\n",
-    "    logits, loss = m(xb, yb)\n",
-    "    optimizer.zero_grad(set_to_none=True)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
+    "The encoder reads the French text without masking and conditions the decoding on the entire French text.\n",
     "\n",
-    "# print(loss.item())\n",
-    "# generate from the model\n",
-    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
-    "print(decode(m.generate(context, max_new_tokens=500)[0].tolist()))\n"
+    "nanoGPT repo has a little bit more complicated version of what we worked on as it doesn't hard code the hyperparameters as global variables and allows for tuning hyperparameters\n",
+    "\n",
+    "## Back to ChatGPT\n",
+    "\n",
+    "How would we train ChatGPT ourselves and how does it relate to this material?\n",
+    "\n",
+    "Training stages:\n",
+    "1. Pre-training \n",
+    "   1. Take in a lot of data\n",
+    "   2. Build a first decoder-only transformer\n",
+    "      1. Basically what we did but on a much larger scale\n",
+    "\n",
+    "GPT is massive compared to what we did. We have something like 10 million parameters compared to GPT-3 with 175B. GPT-3 has 96 layers, an n_embd of 12,288, 96 heads with head_size of 128, and 3.2M batch_size (ours was 65)\n",
+    "\n",
+    "Afterwards, you get something that babbles, so you must fine tune to get the chat assistant\n",
+    "\n",
+    "2. Fine tuning (we didn't talk about this)\n",
+    "   1. Collect conversational training data\n",
+    "      1. Labeler demonstrates desired output\n",
+    "   2. Collect comparison data and train a reward model\n",
+    "   3. Optimize a policy against the reward model using the PPO reinforcement learning algorithm\n",
+    "      1. Proximal Policy Optimization (PPO) model is from the supervised policy\n",
+    "      2. Policy generates output\n",
+    "      3. Reward model calculates reward for output\n",
+    "      4. Reward updates policy using PPO\n"
    ]
   },
   {
